# headscale-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: docker-compose.yaml
docker/config/: config.yaml
docker/headscale-project/: docker-compose.yaml
docker/headscale-project/headscale/config/: config.yaml  db.sqlite
docker/headscale/config/: config.yaml  db.sqlite
