[tool.poetry]
name = "headscale-project"
version = "0.1.0"
description = "A project to play with headscale"
authors = ["yuttasartviratpan <yuttasart.vir@student.mahidol.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
